# resnet-cifar10

./: .gitignore  README.md  eval.py  plot_metrics.py  pyproject.toml  train.py
data/: cifar10.py
docs/: res_net_18_on_cifar_10_implementation_plan.md  res_net_18_on_cifar_10_reproducible_repo_plan_paper_faithful_ablation.md
docs/reports/: 2026-02-08-initial-ablation-summary.md
experiments/: baseline.yaml  no_residual.yaml
models/: blocks.py  resnet.py
tests/: test_config.py  test_data_split.py  test_logging.py  test_model.py  test_train_epoch.py
utils/: __init__.py  config.py  logging.py  metrics.py
